Update display_errors, display_startup_errors, error_reporting in /cli/php.ini.

--- a/config-example/etc/apache2/sites-available/default.conf
+++ b/config-example/etc/apache2/sites-available/default.conf
@@ -10,12 +10,31 @@
 
 
 <VirtualHost *:80>
-    DocumentRoot /host/test.dev/public
-    ServerName test.dev
+    DocumentRoot /var/www/phpmyadmin
+    ServerName phpmyadmin.73
+</VirtualHost>
+
+
+<VirtualHost *:80>
+    DocumentRoot /host/test.local/public
+    ServerName test.local
     
     DirectoryIndex index.htm index.html index.php
     
-    <Directory "/host/test.dev/public">
+    <Directory "/host/test.local/public">
+        Require all granted
+    </Directory>
+    
+</VirtualHost>
+
+
+<VirtualHost *:80>
+    DocumentRoot /host/test.local/public
+    ServerName test.local.73
+    
+    DirectoryIndex index.htm index.html index.php
+    
+    <Directory "/host/test.local/public">
         Require all granted
     </Directory>
     
