--- a/config/etc/apache2/sites-available/common.conf
+++ b/config/etc/apache2/sites-available/common.conf
@@ -49,3 +49,20 @@
     </Directory>
 
 </VirtualHost>
+
+
+<VirtualHost *:80>
+    DocumentRoot /var/www/phpmyadmin
+    ServerName phpmyadmin.73
+    DirectoryIndex index.htm index.html index.php
+
+    <Directory "/var/www/phpmyadmin">
+        AllowOverride All
+        Require all granted
+
+        #Order allow,deny
+        #Allow from all
+        #Satisfy any
+    </Directory>
+
+</VirtualHost>
